[package]
authors = ["Gregor Reitzenstein <dean4devil@paranoidlabs.org>"]
description = "Pure Rust LDAP Implementation (Not abandonware anymore!)"
documentation = "https://docs.rs/ldap"
keywords = ["ldap", "libldap"]
license = "MIT/Apache-2.0"
name = "ldap"
readme = "README.md"
repository = "https://github.com/dequbed/rust-ldap"
version = "0.4.0"

[features]
default = ["mesalock_sgx", "std"]
mesalock_sgx = ["std","sgx_tstd"]
std = ["mesalock_sgx"]

[dependencies]
sgx_tstd    = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", features = ["net"], optional = true }
asnom         = { git = "https://github.com/renxingliang/asnom-sgx.git" }
byteorder   = { git = "https://github.com/mesalock-linux/byteorder-sgx" }